# ObsClippingsManager

./: .Rprofile  .gitignore  CLAUDE.md  README.md  debug_citation_parser_patterns.py  debug_citation_process.py  debug_config_patterns.py  debug_output_format.py  debug_pattern_matching.py  debug_test.py  dev-rule.md  main.py  pyproject.toml  requirements.txt  spec-rule.md  test_authors_debug.py  test_authors_fix.py  test_basic_citation_fetcher.py  test_bibtex_enrichment.py  test_citation_parser_direct.py  test_citations.md  test_citations_parsed.md  test_first_author_only.py  test_metadata_display.py  test_new_escaped_format.py  test_real_file.py  test_regex_fix.py
.cursor/rules/: dev-rule.md  dev-rule.mdc  manuscripts-manager.mdc  obs-clippings-manager-rule.md  obs-clippings-manager-rule.mdc  rule-edit.md  specification-rule.md  specification-rule.mdc
TestManuscripts/: .test_env_info.txt  CurrentManuscript.bib  README.md
TestManuscripts/Clippings/: Cytokeratin 13 (CK13) expression in cancer a tissue microarray study on 10,439 tumors.md  KRT13 is upregulated in pancreatic cancer stem-like cells and associated with radioresistance.md  Keratin 13 expression reprograms bone and brain metastases of human prostate cancer cells.md  Keratin Profiling by Single-Cell RNA-Sequencing Identifies Human Prostate Stem Cell Lineage Hierarchy and Cancer Stem-Like Cells.md
backups/: KRT13 is upregulated in pancreatic cancer stem-like cells and associated with radioresistance_20250606_052219.backup.md  KRT13 promotes stemness and drives metastasis in breast cancer through a plakoglobinc-Myc signaling pathway - Breast Cancer Research_20250606_052219.backup.md
code/: __init__.py
code/contexts/: PROGRESS.md  (+23 more)
config/: config.yaml  publisher_patterns.yaml
test_data/: sample_references.bib
(+248 files in other folders)
