[project]
name = "obsclippingsmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "anthropic>=0.52.2",
    "beautifulsoup4>=4.13.4",
    "bibtexparser>=1.4.3",
    "lxml>=5.4.0",
    "markdownify>=1.1.0",
    "markitdown>=0.1.2",
    "metapub>=0.5.12",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]
